gcc/testsuite/gdc.test/fail_compilation/imports/import23873.d
static if ;
else auto x
